rust/macros/tests/invalid/target/debug/deps/two_arrows_rs-094ba0c253843d5b.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libtwo_arrows_rs-094ba0c253843d5b.rmeta: two-arrows.rs Cargo.toml

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/two_arrows_rs-094ba0c253843d5b.d: two-arrows.rs Cargo.toml

two-arrows.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
